objects/NDA_SNPS_Cadence_Authorized_Employees__c.object
<CustomObject>
    <fields>
        <fullName>Access_End_Date__c</fullName>
        <label>Access Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreement_Approval_Status__c</fullName>
        <formula>TEXT(Related_Agreement__r.Apttus_Approval__Approval_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Status_Category__c</fullName>
        <formula>TEXT(Related_Agreement__r.Apttus__Status_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Status Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Status__c</fullName>
        <formula>TEXT(Related_Agreement__r.Apttus__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agreement Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Notice_To_Vormetric__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Notice To Vormetric</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Belongs_to_Current_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Belongs to Current Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chamber_Type__c</fullName>
        <formula>Related_Agreement__r.Chamber_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chamber Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NDA_SNPS_Cadence_Authorized_Employees2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Flow_URL__c</fullName>
        <formula>$Label.RVP_Notification_Forecast_URL + &apos;/apex/SNPS_End_Flow?Id=&apos; + Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Flow URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Access_Date__c</fullName>
        <label>Last Access Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mutual_Customer__c</fullName>
        <formula>Related_Agreement__r.APTPS_Agreement_Nature__c</formula>
        <label>Mutual Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Never_Accessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Never Accessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Related_Agreement__r.APTPS_Agreement_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_ARM_Restriction_Applied__c</fullName>
        <formula>&quot;Employee is restricted from working in specific areas of Cadence’s business due to employee’s access of Synopsys data. You may follow the Document Link to view details related to this restriction.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ref_ARM_Restriction_Applied</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_ARM_Restriction_End_Date__c</fullName>
        <formula>IF(Never_Accessed__c = true , NULL,
/* INNER IF*/
IF(
ISPICKVAL(Related_Agreement__r.APTPS_IP_Product_Origin__c, &quot;Soft Core&quot;),
if(ISNULL(Last_Access_Date__c), Access_End_Date__c+365, Last_Access_Date__c+365),
if(ISNULL(Last_Access_Date__c), Access_End_Date__c+3*365, Last_Access_Date__c+3*365)
) /* END OF INNER IF*/
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ref_ARM_Restriction_End_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ref_ARM_Restriction_ProjectID__c</fullName>
        <label>Ref_ARM_Restriction_ProjectID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_ARM_Restriction_ProjectName__c</fullName>
        <label>Ref_ARM_Restriction_ProjectName</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_ARM_Restriction_Reason__c</fullName>
        <formula>if (Never_Accessed__c,&quot;Never_Accessed&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ref_ARM_Restriction_Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_ARM_Restriction_Start_Date__c</fullName>
        <formula>if (Never_Accessed__c, NULL, if(ISNULL(Related_Agreement__r.Apttus__Activated_Date__c),DATEVALUE(Related_Agreement__r.LastModifiedDate),Related_Agreement__r.Apttus__Activated_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ref_ARM_Restriction_Start_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ref_ARM_Restriction_Status__c</fullName>
        <formula>if(Never_Accessed__c,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ref_ARM_Restriction_Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ref_ARM_Restriction_URLLink__c</fullName>
        <formula>$Label.RVP_Notification_Forecast_URL + &apos;/apex/Agreement_Detail?id=&apos; + Related_Agreement__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ref_ARM_Restriction_URLLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refrigeration_End_Date__c</fullName>
        <formula>IF(Never_Accessed__c = true , null,
/* INNER IF*/
IF( 
   AND( NOT(ISBLANK(Last_Access_Date__c )),
       ISPICKVAL(Related_Agreement__r.APTPS_IP_Product_Origin__c, &quot;Soft Core&quot;)), 
   Last_Access_Date__c + 365, /* END OF TRUE CLAUSE */
   
   IF(
       AND( NOT(ISBLANK(Last_Access_Date__c )),
            ISPICKVAL(Related_Agreement__r.APTPS_IP_Product_Origin__c, &quot;Hard Core&quot;)), 
       Last_Access_Date__c + 365 * 3, /* END OF TRUE CLAUSE */
       null
   )
) /* END OF INNER IF*/
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Refrigeration End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>NDA SNPS Cadence Authorized Employees</relationshipLabel>
        <relationshipName>NDA_SNPS_Cadence_Authorized_Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NDA_SNPS_Cadence_Authorized_Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RestrictionDuration__c</fullName>
        <formula>IF(ISPICKVAL(Related_Agreement__r.APTPS_Product_Origin__c, &apos;Soft Core&apos;) , &apos;one year&apos;, &apos;three years&apos;)</formula>
        <label>RestrictionDuration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF( Never_Accessed__c , &quot;Inactive&quot;, &quot;Active&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Access_Date__c</fullName>
        <formula>HYPERLINK( End_Flow_URL__c , &apos;Update Access Date&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Update Access Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NDA_SNPS_Cadence_Authorized_Employees1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>NDA SNPS Cadence Authorized Employees</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NDA SNPS Cadence Authorized Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>